# Hackathon-II-Evolution-of-Todo

Phase-I/: CLAUDE.md  Hackathon_Phase1_Todo_App_Project_Description.md  run_todo.py  test_functionality.py
Phase-I/specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-I/src/: main.py
Phase-I/src/cli/: menu.py
Phase-I/src/models/: task.py
Phase-I/src/services/: task_manager.py
Phase-I/src/utils/: logger.py  validation.py
Phase-I/tests/integration/: test_cli.py
Phase-II/backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  reset_db.py
Phase-II/backend/alembic/versions/: 001_initial_tables.py
Phase-II/backend/src/: main.py
Phase-II/backend/src/api/v1/: router.py
Phase-II/backend/src/api/v1/endpoints/: auth.py  tasks.py
Phase-II/backend/src/core/: auth.py  auth_utils.py  config.py  database.py  exceptions.py  logging.py  responses.py  security.py
Phase-II/backend/src/models/: task.py  user.py
Phase-II/backend/src/services/: task_service.py  user_service.py
Phase-II/backend/tests/: conftest.py
Phase-II/backend/tests/integration/: test_task_endpoints.py
Phase-II/frontend/: README.md  package-lock.json  package.json
Phase-II/frontend/app/: globals.css  layout.jsx  page.jsx
Phase-II/frontend/components/: GlobalErrorBoundary.jsx  Header.jsx  LoadingSkeleton.jsx  Navbar.jsx  PriorityBadge.jsx  ProtectedRoute.jsx  ResponsiveLayout.jsx  SearchFilterBar.jsx  TagList.jsx  TaskCard.jsx  TaskForm.jsx  TaskList.jsx  ThemeProvider.jsx
Phase-II/frontend/lib/: api.js  auth.js
(+62 files in other folders)
